--- a/templates/index.html
+++ b/templates/index.html
@@ -57,8 +57,8 @@
       <img class="img-fluid mb-5 d-block mx-auto" src="i" alt="">
       <h1 class="text-uppercase mb-0">salud web</h1>
       <hr class="star-light">
-      <h2 class="font-weight-light mb-0">"La salud mas practica,rapida y segura"</h2>
-      <h2 class="font-weight-light mb-0">Salud Web estará disponible 24 horas del dia los 365 días al año: de día, de noche, entre semana o durante el fin de semana
+      <h2 class="font-weight-light mb-0">"La salud mas practica, rapida y segura"</h2>
+      <h2 class="font-weight-light mb-0">La plataforma Salud Web estará disponible 24 horas del dia los 365 días al año, de día, de noche, entre semana o durante el fin de semana
       <br>
       <br>
       <a style="color:#000" class="font-weight-light mb-0" href="http://127.0.0.1:5000/registro" title="Te garantizamos seguridad de tus datos" ><img src="{{ url_for('static', filename='img/registrate.png')}}" width="250" height="100">
@@ -73,7 +73,7 @@
   <!-- datos personales Grid Section -->
   <section class="datos personales" id="datos_personales">
       <div class="container">
-         <img class="img-fluid mb-5 d-block mx-auto" src="{{ url_for('static', filename='img/imagen7.jpg') }}" alt=""></a>
+         <img class="img-fluid mb-5 d-block mx-auto" src="{{ url_for('static', filename='img/imagen7.jpg') }}"  alt=""></a>
         <h2 class="text-center text-uppercase text-secondary mb-0">datos personales</h2>
         <hr class="star-dark mb-5">
         <h4 style="color: #20c997">¿Qué es salud Web?</h4>
@@ -152,12 +152,12 @@
       <div class="container">
     <div class="row">
         <!-- Team Member 1 -->
-        <div class="col-xl-3 col-md-6 mb-4">
+        <div class="col-xl-2 col-md-6 mb-4">
           <div class="card border-0 shadow">
-            <img src="static/img/equipo/vickysanta.jpg" class="card-img-top" alt="...">
+            <img src="static/img/equipo/vickysanta.jpg"  class="card-img-top" alt="...">
             <div class="card-body text-center" style="background-color:#000; color:antiquewhite;">
               <h5 class="card-title mb-0">Paula Garcia</h5>
-              <div class="card-text text-white-50">Desarolladora Frontend</div><br>
+              <div class="card-text text-white-50"><br>Desarolladora Front-end</div><br>
               <div class="fusion-social-networks boxed-icons">
                   <div class="fusion-social-networks-wrapper">
                       <ul class="list-inline mb-0">
@@ -183,12 +183,12 @@
           </div>
         </div>
         <!-- Team Member 2 -->
-        <div class="col-xl-3 col-md-6 mb-4">
+        <div class="col-xl-2 col-md-6 mb-4">
             <div class="card border-0 shadow">
               <img src="static/img/equipo/Laura.jpg" class="card-img-top" alt="...">
               <div class="card-body text-center" style="background-color:#000; color:antiquewhite;">
                 <h5 class="card-title mb-0">Laura Gomez</h5>
-                <div class="card-text text-white-50">Desarrolladora Backend</div><br>
+                <div class="card-text text-white-50"><br>Desarrolladora Back-end</div><br>
                 <div class="fusion-social-networks boxed-icons">
                     <div class="fusion-social-networks-wrapper">
                         <ul class="list-inline mb-0">
@@ -214,12 +214,12 @@
             </div>
           </div>
         <!-- Team Member 3 -->
-        <div class="col-xl-3 col-md-6 mb-4">
+        <div class="col-xl-2 col-md-6 mb-4">
             <div class="card border-0 shadow">
               <img src="static/img/equipo/mauri.jpg" class="card-img-top" alt="...">
               <div class="card-body text-center" style="background-color:#000; color:antiquewhite;">
                 <h5 class="card-title mb-0">Mauricio Acosta</h5>
-                <div class="card-text text-white-50">Desarrollador Backend</div><br>
+                <div class="card-text text-white-50">Desarrollador Back-end</div><br>
                 <div class="fusion-social-networks boxed-icons">
                     <div class="fusion-social-networks-wrapper">
                         <ul class="list-inline mb-0">
@@ -245,7 +245,7 @@
             </div>
           </div>
         <!-- Team Member 4 -->
-        <div class="col-xl-3 col-md-6 mb-4">
+        <div class="col-xl-2 col-md-6 mb-4">
             <div class="card border-0 shadow">
               <img src="static/img/equipo/silvi.jpg" class="card-img-top" alt="...">
               <div class="card-body text-center" style="background-color:#000; color:antiquewhite;">
@@ -276,12 +276,13 @@
             </div>
           </div>
         <!-- Team Member 5 -->
-        <div class="col-xl-3 col-md-6 mb-4">
+        <div class="col-xl-2 col-md-6 mb-4">
             <div class="card border-0 shadow">
               <img src="static/img/equipo/david.jpg" class="card-img-top" alt="...">
               <div class="card-body text-center" style="background-color:#000; color:antiquewhite;">
                 <h5 class="card-title mb-0">David Castro</h5>
-                <div class="card-text text-white-50">Desarrollador Frontend</div><br>
+                <div class="card-text text-white-50">Desarrollador Front-end <br>
+                  y Back-end</div><br>
                 <div class="fusion-social-networks boxed-icons">
                     <div class="fusion-social-networks-wrapper">
                         <ul class="list-inline mb-0">
