--- a/templates/otros.html
+++ b/templates/otros.html
@@ -212,7 +212,7 @@
                               Fecha Inicio
                             </th>
                             <th>
-                              Diagnostico Odontologia
+                              Diagnostico Odontologico
                             </th>
                             <th>
                               Estudios Realizados
